# secret

./: .gitignore  Cargo.toml  README.md
.github/workflows/: basic.yml
attestation-agent/: Cargo.toml  build.rs
attestation-agent/src/: main.rs  server.rs
auths/kbs_protocol/: Cargo.toml  build.rs
auths/kbs_protocol/protos/: attestation-agent.proto
auths/kbs_protocol/src/: attestation_agent_client.rs  client.rs  lib.rs  tee_pubkey.rs
high-level-services/image/: Cargo.toml  README.md
high-level-services/image/src/: lib.rs
high-level-services/image/src/annotation_packet/: mod.rs  v1.rs  v2.rs
high-level-services/secret/: Cargo.toml  README.md
high-level-services/secret/src/: lib.rs  unsealer.rs
high-level-services/secret/src/secret/: mod.rs
high-level-services/secret/src/secret/layout/: envelope.rs  vault.rs
hub/: Cargo.toml  build.rs
hub-core/: Cargo.toml
hub-core/src/: hub.rs  lib.rs
hub-core/src/attestation/: mod.rs
hub-core/src/storage/: mod.rs
hub/protos/: sealed_secret.proto
hub/src/: args.rs  hub.rs  main.rs
hub/src/service/: mod.rs
hub/src/service/keyprovider/: mod.rs
hub/src/service/services/: getresource.rs  mod.rs  sealed_secret.rs
hub/src/service/services/keyprovider/: mod.rs
kms/: Cargo.toml
kms/src/: lib.rs
kms/src/kms/: ali.rs  mod.rs
kms/src/vault/: mod.rs
low-level-services/kbs-client/: Cargo.toml
low-level-services/kbs-client/src/: client.rs  lib.rs
low-level-services/kms/: Cargo.toml
low-level-services/kms/src/: ali.rs  api.rs  lib.rs  newer.rs
low-level-services/storage/: Cargo.toml
low-level-services/storage/src/: lib.rs
secret/: Cargo.toml
secret/src/: lib.rs  secret.rs
secret/src/envelope/: ali.rs  mod.rs
secret/src/vault/: mod.rs
src/: secret.rs
src/envelope/: mod.rs
src/vault/: mod.rs
storage/: Cargo.toml
storage/src/: ali.rs  lib.rs
tools/: Cargo.toml
tools/src/: lib.rs
