[package]
name = "secret"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crypto = { git = "https://github.com/confidential-containers/attestation-agent", rev = "bb2c6a2" }
serde = "1.0"
serde_json = "1.0"

[dev-dependencies]
assert-json-diff = "2.0"
