[workspace]
members = [
    "secret",
    "kms",
    "hub",
    "hub-core",
    "storage",
]

[workspace.package]
version = "0.1.0"
authors = ["The Confidential Container Authors"]
description = "Confidential DataHub"
edition = "2021"

[workspace.dependencies]
anyhow = "1.0"
assert-json-diff = "2.0"
async-trait = "0.1.56"
base64 = "0.21.2"
clap = "4.3.0"
env_logger = "0.9.0"
log = "0.4.14"
prost = "0.11.9"
rstest = "0.17.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = "0.24.1"
tokio = "1.0"
tonic = "0.9.2"
tonic-build = "0.9.2"
zeroize = "1.6.0"
