[workspace]
members = [
    "auths/kbs_protocol",
    "high-level-services/secret",
    "high-level-services/image",
    "low-level-services/kbs-client",
    "low-level-services/kms",
    "low-level-services/storage",
    "hub",
    "hub-core",
    "tools",
    "deps/crypto",
    "deps/resource_uri",
]

[workspace.package]
version = "0.1.0"
authors = ["The Confidential Container Authors"]
description = "Confidential DataHub"
edition = "2021"

[workspace.dependencies]
anyhow = "1.0"
assert-json-diff = "2.0"
async-trait = "0.1.56"
base64 = "0.21.2"
cfg-if = "1.0.0"
clap = "4.3.0"
env_logger = "0.9.0"
kbs-types = "0.3"
log = "0.4.14"
prost = "0.11.9"
reqwest = "0.11.18"
rstest = "0.17.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.7"
strum = "0.25"
tokio = "1.0"
tonic = "0.9.2"
tonic-build = "0.9.2"
url = "2.4.0"
zeroize = "1.6.0"
