[package]
name = "hub-core"
version = "0.1.0"
authors = ["The Confidential Container Authors"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
cfg-if.workspace = true
image.path = "../high-level-services/image"
kbs-client = { path = "../low-level-services/kbs-client", optional = true }
kms-client = { path = "../low-level-services/kms", optional = true, package = "kms" }
log.workspace = true
secret.path = "../high-level-services/secret"
serde_json.workspace = true
storage.path = "../low-level-services/storage"
strum = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = [ "rt-multi-thread", "macros" ] }

[dev-dependencies]
assert-json-diff.workspace = true

[build-dependencies]
tonic-build.workspace = true

[features]
default = [ "kbs", "kms" ]
kbs = [ "kbs-client" ]
kms = [ "dep:kms-client" ]