[package]
name = "confidential-datahub"
version = "0.1.0"
authors = ["The Confidential Container Authors"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
base64.workspace = true
clap = { workspace = true, features = [ "derive" ] }
hub-core = { path = "../hub-core", default-features = false }
log.workspace = true
prost.workspace = true
serde.workspace = true
serde_json.workspace = true
strum = { workspace = true, features = [ "derive" ] }
tokio = { workspace = true, features = [ "rt-multi-thread", "macros" ] }
tonic.workspace = true

[dev-dependencies]
rstest.workspace = true

[build-dependencies]
tonic-build.workspace = true

[features]
default = [ "kbs" ]
kbs = [ "hub-core/kbs" ]
kms = [ "hub-core/kms" ]
