[package]
name = "confidential-datahub"
version = "0.1.0"
authors = ["The Confidential Container Authors"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
base64.workspace = true
cfg-if.workspace = true
clap = { workspace = true, features = [ "derive" ] }
image.path = "../high-level-services/image"
kbs-client = { path = "../low-level-services/kbs-client", optional = true }
kms-client = { path = "../low-level-services/kms", optional = true, package = "kms" }
log.workspace = true
prost.workspace = true
resource_uri.path = "../deps/resource_uri"
secret.path = "../high-level-services/secret"
serde.workspace = true
serde_json.workspace = true
strum = { workspace = true, features = [ "derive" ] }
tokio = { workspace = true, features = [ "rt-multi-thread", "macros" ] }
tonic.workspace = true

[dev-dependencies]
assert-json-diff.workspace = true
rstest.workspace = true

[build-dependencies]
tonic-build.workspace = true

[features]
default = [ "kbs", "kms" ]
kbs = [ "kbs-client" ]
kms = [ "dep:kms-client" ]
