[package]
name = "secret"
version = "0.1.0"
authors = ["The Confidential Container Authors"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
base64.workspace = true
crypto = { git = "https://github.com/confidential-containers/attestation-agent", rev = "bb2c6a2" }
kms.path = "../kms"
serde.workspace = true
serde_json.workspace = true
strum = { workspace = true, features = ["derive"] }
zeroize.workspace = true

[dev-dependencies]
assert-json-diff.workspace = true
