[package]
name = "storage"
version = "0.1.0"
authors = ["The Confidential Container Authors"]
publish = false
edition = "2021"

[dependencies]
aliyun-oss-client = "0.11.8"
anyhow.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
strum = { workspace = true, features = ["derive"] }
tokio.workspace = true

[dev-dependencies]
rstest.workspace = true
