[package]
name = "tools"
version = "0.1.0"
authors = ["The Confidential Container Authors"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "secret_cli"

[dependencies]
anyhow.workspace = true
base64.workspace = true
clap.workspace = true
kms.path = "../kms"
secret.path = "../secret"
serde.workspace = true
serde_json.workspace = true
strum = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["rt"]}
zeroize.workspace = true

[dev-dependencies]

