[package]
name = "secret"
version = "0.1.0"
authors = ["The Confidential Container Authors"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
base64.workspace = true
crypto.path = "../../deps/crypto"
kbs-client.path = "../../low-level-services/kbs-client"
kms.path = "../../low-level-services/kms"
rand = "0.8.4"
resource_uri.path = "../../deps/resource_uri"
serde.workspace = true
serde_json.workspace = true
strum = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = [ "sync" ] }
zeroize.workspace = true

[dev-dependencies]
assert-json-diff.workspace = true
